tests/baselines/reference/templateStringInInstanceOfES6.errors.txt
templateStringInInstanceOfES6.ts(1,9): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.


==== templateStringInInstanceOfES6.ts (1 errors) ====
    var x = `abc${ 0 }def` instanceof String;
            ~~~~~~~~~~~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.